# LLM-Safety-Evaluation

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml  evaluation.yaml  qwen_dpo_config.yaml  qwen_dpo_config_v2.yaml  sailor_dpo_config.yaml  sailor_dpo_config_v2.yaml
notebook/: evaluation.ipynb  test.ipynb
result/: Qwen2-1.5B-Instruct-orpo 23-04-2025 01:25:16.jsonl  Qwen2-1.5B-Instruct-sft 21-04-2025 14:37:29.jsonl  Qwen2.5-1.5B-Instruct 21-04-2025 05:12:51.jsonl  Sailor-1.8B-Chat 21-04-2025 07:30:19.jsonl  sailor-1.8B-chat-sft 22-04-2025 00:41:21.jsonl  sailor-1.8b-orpo 23-04-2025 02_50_52.jsonl  sailor-dpo 26-04-2025 04:24:33.jsonl  sailor-dpo-backup 08-05-2025 00:48:17.jsonl  vinallama-2.7b-chat 22-04-2025 10:14:01.jsonl  vinallama-2.7b-chat-orpo 23-04-2025 09_38_14.jsonl  vinallama-2.7b-chat-sft 24-04-2025 01_37_05.jsonl
result/stage_2/: Qwen2-1.5B-Instruct-orpo_24-04-2025_04-10-48.jsonl  Qwen2.5-1.5B-Instruct_25-04-2025_04-11-31.jsonl  Sailor-1.8B-Chat_25-04-2025_03-03-39.jsonl  sailor-1.8b-orpo_24-04-2025_10-32-47.jsonl
src/: dpo_training.py  evaluation.py  inference.py  matrix.py  utils.py
src/processing/: data.py
src/provider/: transformers.py  unsloth.py
tools/: classification_report.py  run_llama_score.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothDDPOTrainer.py
